<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".features.home.ui.views.DashboardActivity">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
            android:id="@+id/bottom_nav"
            android:layout_width ="match_parent"
            android:layout_height = "wrap_content"
            android:layout_alignParentBottom="true"
            app:mbn_backgroundBottomColor="@color/purple_04"
            app:mbn_shadowColor="@color/purple_03"
            app:mbn_countBackgroundColor="@color/purple_03"
            app:mbn_defaultIconColor="#ffffff"
            app:mbn_circleColor="#ffffff"
            app:mbn_selectedIconColor="@color/purple_03"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

