...
    <string name="on_permissions_granted">onPermissionsGranted:</string>
    <string name="double_point">:</string>
    <string name="permission_denied">onPermissionsDenied:</string>
    <string name="permissions_denied">Debe autorizar todos los permisos para continuar</string>
    <string name="app_slogan">El sitio para almacenar la información de su coleccón de música</string>
    <string name="caratula_1">Caratula 1</string>
    <string name="visitor">Visitante</string>
    <string name="collector">Coleccionista</string>
    <string name="log_initial_setup">El tipo de usuario seleccionado es:&#160;</string>
    <string name="albumes">Álbumes</string>
    <string name="image_album">Imagen del álbum</string>
    <string name="title_default">Titulo Default</string>
    <string name="artist_default">Artista Default</string>
    <string name="artists">Artistas</string>
...
