...
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:contentDescription="@string/caratula_1" />

        <Button
            android:id="@+id/buttonVisitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_oscuro"
            android:fontFamily="@font/helveticaltsdbold"
            android:text="@string/visitor"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="@{() -> vModel.setTypeUser(typeUser.VISITOR.value)}"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCollector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonCollector"
            android:layout_width="match_parent"
...
